catkin_ws/logs/iq_gnc/build.make.540.log.stderr
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘void drone1_gpsVelSub_cb(const ConstPtr&)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:320:45: error: cannot convert ‘std_msgs::Header_<std::allocator<void> >::_stamp_type’ {aka ‘ros::Time’} to ‘float’ in assignment
  320 |   my_time[sampleCount] = velError_tw.header.stamp;
      |                          ~~~~~~~~~~~~~~~~~~~^~~~~
      |                                             |
      |                                             std_msgs::Header_<std::allocator<void> >::_stamp_type {aka ros::Time}
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1804: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
